fixed column overflow issue

--- a/homenote/src/App.css
+++ b/homenote/src/App.css
@@ -3,3 +3,13 @@ body {
     overflow-y: hidden;
     overflow-x: hidden;
 }
+
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+.next-row {
+    height: 100vh;
+}
