--- a/homenote/src/components/InfoBar.css
+++ b/homenote/src/components/InfoBar.css
@@ -5,16 +5,6 @@
 	box-shadow: 0px 4px 4px #f6f6f6;
 }
 
-.fadeIn {
-	opacity: 1;
-	animation: fade1 1s linear;
-}
-
-.fadeOut {
-	opacity: 1;
-	animation: fade2 1s linear;
-}
-
 .user-greeting {
 	font-size: 2.5em;
 	margin-top: 1vh;
