--- a/homenote/src/components/NoteBar.css
+++ b/homenote/src/components/NoteBar.css
@@ -1,6 +1,6 @@
 .NoteBar {
-    display: inline-block;
-    width: 60vw;
-    height: 99vh;
+    float:left;
+    width: 60%;
+    height: 100%;
     background-color: #f6f6f6;
 }
